@@ -5,6 +5,8 @@ mariadb-5.5 (5.5.38-1) unstable; urgency=low
   * Made libterm-readkey-perl a depends instead of suggest (LP: #1324082)
   * Add patch to fix HPPA build error (Closes: #751805)
   * Fixed lots and lots of Lintian warnings
+  * Disabled TokuDB (Closes: #753222). Remember to re-enable if once
+    https://mariadb.atlassian.net/browse/MDEV-6449 is closed.
 
  -- Otto Kekäläinen <otto@seravo.fi>  Tue, 17 Jun 2014 16:24:35 +0300
 
